Thu Apr 24 03:58:16 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lex.h (class lexical_feedback): Delete maybe_screwed field.
	New field, parsed_function name.
	* lex.l (lexical_feedback::init): Initialize it.
	(handle_identifier): Don't return SCREW.  Handle switching
	symbol table context properly for `function f ()' vs `function x ='.
	(is_keyword): If looking at function keyword, don't set current
	symbol table to point to the local table.
	* parse.y (recover_from_parsing_function): New function.
	(finish_function_def): Use identifier, not token.
	Simplify parsing of functions.

	* ov-list.h, ov-list.cc: New files to implement generic list type.
	* ov.cc (list_indent): New global variable.
	(increment_list_indent, decrement_list_indent): New functions.
	(install_types): Register octave_list type.
	* ov-base.cc (octave_base_value::is_list): New function.

	* oct-sym.h: New file.
	* ov.h (class octave_value): Derive from octave_symbol class.

	* pt-const.h, pt-const.cc: Delete lots of old useless cruft.

	* pt-exp.h, pt-exp.cc (tree_binary_expression): Use type codes for
	operators from octave_value instead of repeating them here.

	* pt-fvc-base.cc (tree_fvc::increment, tree_fvc::decrement): Delete.
	* pt-fvc.cc (tree_identifier::increment): Get reference to value
	and increment that instead of using virutal tree_fvc::increment
	function.

	* lex.l: Handle +=, -=, *=, /=, .+=, .-=, .*=, ./=, &=, and |= ops.
	* parse.y (make_assign_op): Rename from make_simple_assignment and
	handle different op types.
	(simple_expr1): Do new ops.
	* pt-misc.cc (initialize_undefined_elements): Pass op to assign.
	* pt-cmd.cc (tree_for_command::do_for_command_once): Likewise.
	* pt-fvc.cc (tree_identifier::assign): Pass op.
	* pt-exp.cc (tree_simple_assignment_expression): Handle new ops.
	* variables.cc (octave_variable_reference::assign): Likewise.
	* ov.h (class octave_value): Likewise.
	* ov.cc (octave_value::assign_op_as_string): New function.